--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -55,7 +55,9 @@
   padding: 0 35px;
   font-size: 15px;
   color: #ffb400;
+  display: block;
   text-align: center;
+  text-decoration: none;
   background-color: transparent;
   border: 2px solid #ffb400;
   border-radius: 15px;
