--- a/source/less/template_styles.less
+++ b/source/less/template_styles.less
@@ -3,8 +3,12 @@
 @import "global/fonts.less";
 @import "global/layout.less";
 
+@import "blocks/fancybox.less";
+@import "blocks/form.less";
+@import "blocks/btn.less";
 @import "blocks/middle.less";
 @import "blocks/header.less";
+@import "blocks/callme-form.less";
 @import "blocks/nav.less";
 @import "blocks/main-img.less";
 @import "blocks/intro.less";
@@ -17,7 +21,4 @@
 @import "blocks/social.less";
 @import "blocks/photo.less";
 @import "blocks/video.less";
-@import "blocks/btn.less";
-@import "blocks/form.less";
-@import "blocks/popup.less";
 
