--- a/source/less/blocks/btn.less
+++ b/source/less/blocks/btn.less
@@ -1,24 +1,18 @@
 .btn {
   display: block;
   width: 100%;
-  height: 60px;
-  line-height: 60px;
+  height: 45px;
+  line-height: 45px;
   text-align: center;
-  text-transform: uppercase;
   text-decoration: none;
-  font-size: 21px;
+  font-size: 16px;
   font-weight: bold;
-  color: #fff;
-  background: #81b3d2;
+  color: #333333;
+  background: #ffc029;
   border: none;
+  cursor: pointer;
+  border-radius: 45px;
   &:hover {
-    background: #669ec0
-  }
-  &:active {
-    background: #5496bd;
-    color: #88b6d1;
-  }
-  &[disabled] {
-    background: #e5e5e5;
+    background: #fff400
   }
 }
