--- a/source/less/blocks/nav.less
+++ b/source/less/blocks/nav.less
@@ -1,155 +1,33 @@
 .nav {
+  padding:0 20px;
   position: relative;
+  background: #e1e1e1;
 }
 
-.nav__list {
-  position: relative;
-  display: none;
-  @media @tablet-widths {
-    height: 56px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-  }
-  &:after {
-    content: '';
-    width: 100%;
-    height: 9px;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    background: url("../img/nav-shadow.png") repeat-x bottom;
-    @media @tablet-widths {
-      display: none;
-    }
-  }
-  .nav--no-js & {
-    display: block;
-    @media @tablet-widths {
-      display: flex;
-    }
-  }
+.nav__level1{
+  display: flex;
+  height: 60px;
+  list-style: none;
 }
 
-.nav__item {
-  padding: 15px 0 18px;
-  display: block;
-  position: relative;
-  text-align: center;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 18px;
-  font-weight: bold;
-  color: #fff;
-  background: #81b3d2;
-  &:after {
-    content: '';
-    display: block;
-    width: 100%;
-    height: 0;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    border-top: 1px solid #81b3d2;
-    border-bottom: 1px solid #9ac2db;
-  }
-  &:last-child {
-    &:after {
-      display: none;
+.nav__level1-item{
+  display: table;
+  align-items: center;
+  > a{
+    padding: 0 10px 0 10px;
+    display: table-cell;
+    height:60px;
+    box-sizing: border-box;
+    vertical-align: middle;
+    font-size: 13px;
+    font-weight: 700;
+    color: #343434;
+    text-decoration: none;
+    border-bottom:1px solid transparent;
+    &:hover, .nav__level1-item--active &{
+      background: #e8e8e8;
+      border-bottom:1px solid #aaaaaa;
+      box-shadow: 0 1px 10px 0 rgba(42,42,42,0.2);
     }
-  }
-  @media @tablet-widths {
-    padding: 0;
-    min-width: 100px;
-    display: block;
-    font-size: 14px;
-    color: #000;
-    background: none;
-    &:after {
-      display: none;
-    }
-  }
-  @media @desktop-widths {
-    min-width: 106px;
-  }
-  &:nth-child(2) {
-    @media @tablet-widths {
-      margin-right: 55px;
-    }
-    @media @desktop-widths {
-      margin-right: 120px;
-    }
-  }
-  &:nth-child(3) {
-    @media @tablet-widths {
-      margin-left: 55px;
-    }
-    @media @desktop-widths {
-      margin-left: 120px;
-    }
-  }
-  &:hover {
-    background: #669ec0;
-    @media @tablet-widths {
-      color: #81b3d2;
-      background: none;
-    }
-  }
-  &:active {
-    background: #5496bd;
-    color: #88b6d1;
-    @media @tablet-widths {
-      color: #b2b2b2;
-      background: none;
-    }
-  }
-  &--active {
-    color: #766357;
-    &:hover {
-      @media @tablet-widths {
-        color: #604e43;
-      }
-    }
-    &:active {
-      @media @tablet-widths {
-        color: #d6d0cc;
-      }
-    }
-  }
-}
-
-.nav__hamburger {
-  position: absolute;
-  right: 20px;
-  bottom: -38px;
-  width: 23px;
-  height: 22px;
-  position: absolute;
-  background: url("../img/icon-menu.svg") no-repeat center;
-  background-size: 100%;
-  cursor: pointer;
-  @media @tablet-widths {
-    display: none;
-  }
-  .nav--no-js & {
-    display: none;
-  }
-}
-
-.nav__close {
-  position: absolute;
-  right: 7px;
-  top: 1px;
-  width: 50px;
-  height: 50px;
-  background: url("../img/icon-cross.svg") no-repeat center;
-  background-size: 23px;
-  z-index: 1;
-  cursor: pointer;
-  @media @tablet-widths {
-    display: none;
-  }
-  .nav--no-js & {
-    display: none;
   }
 }
