--- a/source/less/global/layout.less
+++ b/source/less/global/layout.less
@@ -21,8 +21,16 @@ body {
   width: 996px;
 }
 
-.desktop-hide {
-  @media @desktop-widths {
-    display: none;
-  }
+.row {
+  margin-left: -30px;
+  font-size: 0;
+  line-height: 0;
+}
+
+.col3 {
+  margin-bottom: 39px;
+  padding-left: 30px;
+  width: 33.3%;
+  display: inline-block;
+  box-sizing: border-box;
 }
