--- a/source/less/template_styles.less
+++ b/source/less/template_styles.less
@@ -10,6 +10,7 @@
 @import "blocks/header.less";
 @import "blocks/callme-form.less";
 @import "blocks/nav.less";
+@import "blocks/calculator.less";
 @import "blocks/main-img.less";
 @import "blocks/intro.less";
 @import "blocks/info.less";
