--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -21,19 +21,22 @@
 .form__label {
   line-height: normal;
   font-size: 14px;
-  font-weight:bold;
+  font-weight: bold;
   color: #343434;
+  .calculator & {
+    color: #fff;
+  }
 }
 
-.form__error{
-  line-height:normal;
-  font-size:12px;
+.form__error {
+  line-height: normal;
+  font-size: 12px;
   color: #ff3300;
 }
 
 .form__field {
   position: relative;
-  input{
+  input {
     padding: 0 9px;
     height: 45px;
     width: 100%;
@@ -43,11 +46,11 @@
     background: #ffffff;
     border: 1px solid #b0b8bf;
     border-radius: 5px;
-    .form__line--error &{
+    .form__line--error & {
       border-color: #ff3300;
     }
   }
-  .form__line &{
+  .form__line & {
     width: 100%;
   }
 }
@@ -200,20 +203,6 @@
   }
 }
 
-.form__group-checkbox {
-  @media @tablet-widths {
-    margin: 0 60px -13px;
-    padding-top: 16px;
-    display: flex;
-    flex-wrap: wrap;
-  }
-  @media @desktop-widths {
-    margin: 0 0 -20px;
-    padding-top: 0;
-    justify-content: space-between;
-  }
-}
-
 .form__note {
   text-transform: uppercase;
   line-height: normal;
@@ -221,10 +210,82 @@
   color: #333333;
 }
 
-.form__group-desktop-inline {
-  @media @desktop-widths {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
+.form__select {
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+  background: #fff;
+  border: 1px solid #b0b8bf;
+  border-radius: 5px;
+  select {
+    padding: 0 26px 0 9px;
+    position: relative;
+    width: 100%;
+    height: 43px;
+    box-sizing: border-box;
+    font-family: "Open Sans", "Arial", sans-serif;
+    font-size: 14px;
+    color: #343434;
+    border: none;
+    box-shadow: none;
+    background-color: transparent;
+    background-image: none;
+    appearance: none;
+    &:focus {
+      outline: none;
+    }
   }
+  &:before {
+    content: "\f078";
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    font-family: FontAwesome;
+    font-size: 14px;
+    color: #333333;
+  }
+  &--load {
+    border: none;
+    &:before {
+      display: none;
+    }
+  }
+  .select2-container--default .select2-selection--single {
+    background: #fff;
+    border: 1px solid #b0b8bf;
+    border-radius: 5px;
+  }
+  .select2-container .select2-selection--single {
+    height: 45px;
+  }
+  .select2-container--default .select2-selection--single .select2-selection__rendered {
+    line-height: 43px;
+  }
+  .select2-container .select2-selection--single .select2-selection__rendered {
+    padding-left: 9px;
+    padding-right: 43px;
+    font-size: 14px;
+    color: #343434;
+  }
+  .select2-container--default .select2-selection--single .select2-selection__arrow {
+    height: 43px;
+    &:before {
+      content: "\f078";
+      position: absolute;
+      right: 10px;
+      top: 50%;
+      font-family: FontAwesome;
+      font-size: 14px;
+      color: #333333;
+    }
+  }
+  .select2-container--default .select2-selection--single .select2-selection__arrow b {
+    display: none;
+  }
+}
+
+.select2-container--default .select2-results__option--highlighted[aria-selected] {
+  background-color: #ffb400;
 }
