--- a/source/less/blocks/nav.less
+++ b/source/less/blocks/nav.less
@@ -1,33 +1,155 @@
 .nav {
-  padding:0 20px;
+  padding: 0 20px;
   position: relative;
   background: #e1e1e1;
 }
 
-.nav__level1{
+.nav__bg{
+  display: none;
+  position: fixed;
+  left:0;
+  top:0;
+  width: 100%;
+  height:100%;
+  background: rgba(0, 0, 0, 0.2);
+  z-index:10;
+}
+
+.nav__level1 {
   display: flex;
   height: 60px;
   list-style: none;
 }
 
-.nav__level1-item{
+.nav__level1-item {
+  position: relative;
   display: table;
   align-items: center;
-  > a{
+  > a {
     padding: 0 10px 0 10px;
     display: table-cell;
-    height:60px;
+    height: 60px;
     box-sizing: border-box;
     vertical-align: middle;
     font-size: 13px;
     font-weight: 700;
     color: #343434;
     text-decoration: none;
-    border-bottom:1px solid transparent;
-    &:hover, .nav__level1-item--active &{
+    border-bottom: 1px solid transparent;
+  }
+  &:hover, &--active {
+    z-index:20;
+    > a {
       background: #e8e8e8;
-      border-bottom:1px solid #aaaaaa;
-      box-shadow: 0 1px 10px 0 rgba(42,42,42,0.2);
+      border-bottom: 1px solid #aaaaaa;
+      box-shadow: 0 1px 10px 0 rgba(42, 42, 42, 0.2);
     }
+  }
+  &:hover {
+    .nav__level2 {
+      visibility: visible;
+      transform: translateY(0);
+      transition-delay: 0s;
+    }
+  }
+}
+.nav__level2-wrap{
+  position: absolute;
+  width: 825px;
+  left: 0;
+  top: 100%;
+  visibility: hidden;
+  overflow: hidden;
+}
+.nav__level2 {
+  width: 408px;
+  list-style: none;
+  box-shadow: 0 1px 10px 0 rgba(42, 42, 42, 0.2);
+
+  visibility: hidden;
+  transform: translateY(-100%);
+  transition: visibility 0s linear 300ms, transform 300ms linear;
+}
+
+.nav__level2-item {
+  background: #e8e8e8;
+  border-bottom: 1px solid #b4b4b4;
+  &:last-child {
+    border-bottom: none;
+  }
+  &:hover, &--active {
+    > a {
+      background: #ffc029;
+    }
+  }
+  &:hover {
+    .nav__level3 {
+      visibility: visible;
+      transform: translateX(0);
+      transition-delay: 0s;
+    }
+  }
+  &--has-sublevel {
+    > a {
+      position: relative;
+      &:after {
+        content: '';
+        width: 6px;
+        height: 9px;
+        position: absolute;
+        right: 10px;
+        top: 16px;
+        background: url("../images/carret.png") no-repeat center;
+        background-size: 100%;
+      }
+    }
+  }
+  > a {
+    padding: 12px 12px 10px;
+    display: block;
+    text-decoration: none;
+    line-height: normal;
+    font-size: 15px;
+    color: #333333;
+  }
+}
+
+.nav__level3-wrap{
+  position: absolute;
+  left: 100%;
+  top: 0;
+  visibility: hidden;
+  overflow: hidden;
+}
+
+.nav__level3 {
+  width: 408px;
+  list-style: none;
+  border-left: 1px solid #b4b4b4;
+  box-shadow: 0 1px 10px 0 rgba(42, 42, 42, 0.2);
+
+  visibility: hidden;
+  transform: translateX(-100%);
+  transition: visibility 0s linear 300ms, transform 300ms linear;
+}
+
+.nav__level3-item {
+  background: #e8e8e8;
+  border-bottom: 1px solid #b4b4b4;
+  &:last-child {
+    border-bottom: none;
+  }
+  &:hover, &--active {
+    > a {
+      background: #ffc029;
+    }
+  }
+  > a {
+    padding: 12px 12px 10px;
+    display: block;
+    text-decoration: none;
+    line-height: normal;
+    font-size: 15px;
+    color: #333333;
   }
 }
