--- a/source/less/template_styles.less
+++ b/source/less/template_styles.less
@@ -1,4 +1,5 @@
 @import "global/reset.less";
+@import "global/omis-style.less";
 @import "global/variables.less";
 @import "global/fonts.less";
 @import "global/layout.less";
@@ -6,12 +7,18 @@
 @import "blocks/fancybox.less";
 @import "blocks/form.less";
 @import "blocks/btn.less";
+@import "blocks/modal.less";
+@import "blocks/tabs.less";
 @import "blocks/middle.less";
 @import "blocks/header.less";
+@import "blocks/social.less";
 @import "blocks/callme-form.less";
 @import "blocks/nav.less";
 @import "blocks/calculator.less";
-@import "blocks/main-img.less";
+@import "blocks/types.less";
+@import "blocks/service-premium.less";
+@import "blocks/excursion.less";
+/*@import "blocks/main-img.less";
 @import "blocks/intro.less";
 @import "blocks/info.less";
 @import "blocks/info-item.less";
@@ -19,7 +26,6 @@
 @import "blocks/feedback.less";
 @import "blocks/map.less";
 @import "blocks/footer.less";
-@import "blocks/social.less";
 @import "blocks/photo.less";
-@import "blocks/video.less";
+@import "blocks/video.less";*/
 
