--- a/source/less/blocks/calculator.less
+++ b/source/less/blocks/calculator.less
@@ -2,6 +2,9 @@
   padding: 66px 20px 53px;
   background: #343434;
   color: #ffffff;
+  .row{
+    margin: 0 -5px 0 -30px;
+  }
 }
 
 .calculator__title {
@@ -13,4 +16,19 @@
   i {
     margin-right: 24px;
   }
+}
+
+.calculator__separator {
+  margin: 0 -42px 30px;
+  border-bottom: 1px solid #5d5d5d;
+}
+
+.calculator__note{
+  text-align: center;
+  line-height:1.9;
+  font-size:16px;
+}
+
+.calculator__note-f24{
+  font-size:24px;
 }
