--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -46,6 +46,9 @@
     background: #ffffff;
     border: 1px solid #b0b8bf;
     border-radius: 5px;
+    &:focus {
+      border: 1px solid #343434;
+    }
     .form__line--error & {
       border-color: #ff3300;
     }
@@ -239,6 +242,7 @@
   }
   &:before {
     content: "\f078";
+    margin-top: -7px;
     position: absolute;
     right: 10px;
     top: 50%;
@@ -273,6 +277,7 @@
     height: 43px;
     &:before {
       content: "\f078";
+      margin-top: -7px;
       position: absolute;
       right: 10px;
       top: 50%;
@@ -289,3 +294,46 @@
 .select2-container--default .select2-results__option--highlighted[aria-selected] {
   background-color: #ffb400;
 }
+
+.form__file {
+  padding-left: 19px;
+  overflow: hidden;
+  position: relative;
+  text-align: left;
+  &:before {
+    content: "\f0c6";
+    position: absolute;
+    left: 0;
+    top: 3px;
+    line-height: normal;
+    font-family: FontAwesome;
+    font-size: 14px;
+    color: #ffc029;
+    .form__file:hover & {
+      color: #ffce58;
+    }
+  }
+  input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    -moz-opacity: 0;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    z-index: 20;
+  }
+}
+
+.form__file-label {
+  line-height: normal;
+  font-size: 14px;
+  color: #ffc029;
+  border-bottom: 1px dotted #ffc029;
+  .form__file:hover & {
+    color: #ffce58;
+    border-bottom: 1px dotted #ffce58;
+  }
+}
+
