--- a/source/less/global/fonts.less
+++ b/source/less/global/fonts.less
@@ -1,8 +1,8 @@
 @font-face {
   font-family: 'Open Sans';
   src:  local("Open Sans"),
-        url('/fonts/open-sans-webfont.woff2') format('woff2'),
-        url('/fonts/open-sans-webfont.woff') format('woff');
+        url('../fonts/open-sans-webfont.woff2') format('woff2'),
+        url('../fonts/open-sans-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 
@@ -11,8 +11,8 @@
 @font-face {
   font-family: 'Open Sans';
   src: local("Open Sans"),
-  url('/fonts/open-sans-light-webfont.woff2') format('woff2'),
-  url('/fonts/open-sans-light-webfont.woff') format('woff');
+  url('../fonts/open-sans-light-webfont.woff2') format('woff2'),
+  url('../fonts/open-sans-light-webfont.woff') format('woff');
   font-weight: 300;
   font-style: normal;
 
@@ -21,8 +21,8 @@
 @font-face {
   font-family: 'Open Sans';
   src: local("Open Sans"),
-  url('/fonts/open-sans-semibold-webfont.woff2') format('woff2'),
-  url('/fonts/open-sans-semibold-webfont.woff') format('woff');
+  url('../fonts/open-sans-semibold-webfont.woff2') format('woff2'),
+  url('../fonts/open-sans-semibold-webfont.woff') format('woff');
   font-weight: 700;
   font-style: normal;
 }
@@ -30,10 +30,20 @@
 @font-face {
   font-family: 'Open Sans';
   src: local("Open Sans"),
-      url('/fonts/open-sans-bold-webfont.woff2') format('woff2'),
-      url('/fonts/open-sans-bold-webfont.woff') format('woff');
+      url('../fonts/open-sans-bold-webfont.woff2') format('woff2'),
+      url('../fonts/open-sans-bold-webfont.woff') format('woff');
   font-weight: bold;
   font-style: normal;
+}
+
+@font-face {
+  font-family: "RobotoCondensed";
+  src: local("RobotoCondensed"),
+      url('../fonts/roboto_candensed-webfont.woff2') format('woff2'),
+      url('../fonts/roboto_candensed-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
 }
 
 
