--- a/source/less/global/layout.less
+++ b/source/less/global/layout.less
@@ -3,17 +3,13 @@ body {
   margin: 0;
   line-height: normal;
   font-family: "Open Sans", "Arial", sans-serif;
+  overflow-y: scroll;
 }
 
 .wrapper {
-  margin: 0 auto -100px;
+  margin: 0 auto;
   min-height: 100%;
   height: auto !important;
-  &:after {
-    content: '';
-    display: block;
-    height: 100px;
-  }
 }
 
 .wrap {
@@ -23,8 +19,19 @@ body {
 
 .row {
   margin-left: -30px;
-  font-size: 0;
-  line-height: 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.col2 {
+  margin-bottom: 39px;
+  padding-left: 30px;
+  width: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  &--bottom{
+    align-self: flex-end;
+  }
 }
 
 .col3 {
@@ -33,4 +40,14 @@ body {
   width: 33.3%;
   display: inline-block;
   box-sizing: border-box;
+  &--bottom{
+    align-self: flex-end;
+  }
 }
+
+a{
+  color: #333333;
+}
+ p{
+   margin: 0 0 1em;
+ }
